k8s/11-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlatte
  namespace: sqlatte
spec:
  selector:
    app: sqlatte
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
